v1.1.0/modules/schema/pages/class/SwitchOperationSummary.adoc
= `SwitchOperationSummary`
:toclevels: 4


+++Up-to-date, of-record summary of switch operation information, distilled from a variety of sources (real-time data or real-time data historian, field inspections, etc.) of use to asset health analytics.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:SwitchOperationSummary`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`SwitchOperationSummary`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Breaker,`Breaker`>>
//| [[slots_table.Breaker]]<<Breaker,`Breaker`>>
| 1 +
xref::class/Asset.adoc[`Asset`]
| +++Breaker asset to which this operation information applies.+++
| _n/a_

| <<lifetimeFaultOperations,`lifetimeFaultOperations`>>
//| [[slots_table.lifetimeFaultOperations]]<<lifetimeFaultOperations,`lifetimeFaultOperations`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Total breaker fault operations to date.+++
| _n/a_

| <<lifetimeMotorStarts,`lifetimeMotorStarts`>>
//| [[slots_table.lifetimeMotorStarts]]<<lifetimeMotorStarts,`lifetimeMotorStarts`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Total motor starts to date.+++
| _n/a_

| <<lifetimeTotalOperations,`lifetimeTotalOperations`>>
//| [[slots_table.lifetimeTotalOperations]]<<lifetimeTotalOperations,`lifetimeTotalOperations`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Total breaker operations to date (including fault and non-fault).+++
| _n/a_

| <<mostRecentFaultOperationDate,`mostRecentFaultOperationDate`>>
//| [[slots_table.mostRecentFaultOperationDate]]<<mostRecentFaultOperationDate,`mostRecentFaultOperationDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date of most recent breaker fault operation.+++
| _n/a_

| <<mostRecentMotorStartDate,`mostRecentMotorStartDate`>>
//| [[slots_table.mostRecentMotorStartDate]]<<mostRecentMotorStartDate,`mostRecentMotorStartDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date of most recent motor start.+++
| _n/a_

| <<mostRecentOperationDate,`mostRecentOperationDate`>>
//| [[slots_table.mostRecentOperationDate]]<<mostRecentOperationDate,`mostRecentOperationDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date of most recent breaker operation (fault or non-fault).+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Breaker]
=== `Breaker`
+++Breaker asset to which this operation information applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchOperationSummary.Breaker`
| Cardinality
| 1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Breaker,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#lifetimeFaultOperations]
=== `lifetimeFaultOperations`
+++Total breaker fault operations to date.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchOperationSummary.lifetimeFaultOperations`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.lifetimeFaultOperations,&#10548;>>
--
////


//[discrete]
[#lifetimeMotorStarts]
=== `lifetimeMotorStarts`
+++Total motor starts to date.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchOperationSummary.lifetimeMotorStarts`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.lifetimeMotorStarts,&#10548;>>
--
////


//[discrete]
[#lifetimeTotalOperations]
=== `lifetimeTotalOperations`
+++Total breaker operations to date (including fault and non-fault).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchOperationSummary.lifetimeTotalOperations`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.lifetimeTotalOperations,&#10548;>>
--
////


//[discrete]
[#mostRecentFaultOperationDate]
=== `mostRecentFaultOperationDate`
+++Date of most recent breaker fault operation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchOperationSummary.mostRecentFaultOperationDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.mostRecentFaultOperationDate,&#10548;>>
--
////


//[discrete]
[#mostRecentMotorStartDate]
=== `mostRecentMotorStartDate`
+++Date of most recent motor start.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchOperationSummary.mostRecentMotorStartDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.mostRecentMotorStartDate,&#10548;>>
--
////


//[discrete]
[#mostRecentOperationDate]
=== `mostRecentOperationDate`
+++Date of most recent breaker operation (fault or non-fault).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:SwitchOperationSummary.mostRecentOperationDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.mostRecentOperationDate,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Asset.adoc[`Asset`] | xref::class/Asset.adoc#BreakerOperation[`BreakerOperation`]


|===

